=== HEAD

* Greatly improved support on Microsoft Access (jeremyevans)

* Support Database#{schema,tables,views,indexes,foreign_key_list} when using ado/access adapter (ericgj) (#545, #546)

* Add ado/access adapter for accessing Microsoft Access via the ado adapter (jeremyevans)

* Combine disconnect error detection for mysql and mysql2 adapters (jeremyevans)

* Update the association_pks plugin to handle composite primary keys (chanks, jeremyevans) (#544)

=== 3.39.0 (2012-09-01)

* Fix defaults_setter to set false default values (jeremyevans)

* Fix serial sequence query in Database#primary_key_sequence on PostgreSQL (jeremyevans) (#538)

* Add Database#copy_into when using postgres adapter with pg driver, for very fast inserts into tables (jeremyevans)

* Combine multiple alter_table operations into a single query where possible on MySQL and PostgreSQL (jeremyevans)

* Handle sets of alter_table operations on MySQL and MSSQL where later operations depend on earlier ones (jeremyevans)

* Add constraint_validations plugin for automatic validations of constaints defined by extension (jeremyevans)

* Add constraint_validations extension for defining database constraints similar to validations (jeremyevans)

* Add Database#supports_regexp? for checking for regular expression support (jeremyevans)

* Add Sequel.trim for cross platform trim function (jeremyevans)

* Add Sequel.char_length for cross platform char_length function (jeremyevans)

* Fixing caching of MySQL server version (hannesg) (#536)

* Allow overriding the convert_tinyint_to_bool setting on a per-Dataset basis in the mysql and mysql2 adapters (jeremyevans)

* Make ValidationFailed and HookFailed exceptions have model method that returns the related model (jeremyevans)

* Automatically wrap array arguments to most PGArrayOp methods in PGArrays (jeremyevans)

* Add set_column_not_null to alter table generator for marking a column as not null (jeremyevans)
